# arb-finder

./: .env.example  .gitignore  .npmrc  CLAUDE.md  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  state.md  tsconfig.base.json  vercel.json
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/bankroll/: page.tsx
apps/web/app/boosts/: actions.ts  page.tsx
apps/web/app/import/: actions.ts  page.tsx
apps/web/app/search/: page.tsx
apps/web/app/settings/: actions.ts  page.tsx
apps/web/components/analytics/: AnalyticsClient.tsx  DataGrid.tsx  DrilldownTabs.tsx  InteractiveCard.tsx  charts.tsx
apps/web/components/bankroll/: BankrollClient.tsx
apps/web/lib/: analytics-derivations.ts  deep-links.ts  excel-import.ts  format.ts
apps/worker/: .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
apps/worker/arb_worker/: __init__.py  __main__.py  cli.py  config.py  db.py  logging_setup.py  notifications.py  scheduler.py
apps/worker/arb_worker/boosts/: __init__.py  auto_detect.py
apps/worker/arb_worker/matcher/: canonical.py  event_matcher.py
apps/worker/arb_worker/pipeline/: recompute_arbs.py  run_cycle.py
apps/worker/arb_worker/scrapers/: __init__.py  base.py  bet365.py  betmgm.py  betrivers.py  caesars.py  draftkings.py  espnbet.py  fanatics.py  fanduel.py  playwright_base.py
apps/worker/tests/: test_arb_math.py  test_canonical.py  test_cycle_smoke.py
db/: schema.postgres.prisma  schema.prisma  seed.ts
(+21 files in other folders)
